tests/rascal/negative/parse_errors/L2/of-reserved.ob
MODULE Bla;

BEGIN
  x := OF
END Bla.